# seattle_crime_analytics

./: .gitignore  README.md  console.py  elt_workflow.py  pyproject.toml  settings.py
src/: client.py  db.py  main.py  utils.py
src/api/models/: designated_police_location.py  offense.py  offense_detail.py  offense_group.py  offense_location.py  report.py
src/elt/: aws.py  client.py  crime_adapter.py  ingest.py  s3.py  transform.py
src/etl/: client.py  crime_adapter.py  s3.py
src/models/: crime.py
src/postgres/: create_tables.sql
