[tool.poetry]
name = "seattle-crime"
version = "0.1.0"
description = "Seattle Crime"
authors = ["Narapady"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
